--- a/her_tech_collective/src/pages/HomePage.css
+++ b/her_tech_collective/src/pages/HomePage.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:ital,wght@0,700;1,400&display=swap');
 
 /* section */
 .banner {
@@ -29,7 +29,6 @@
     opacity: 1;
 }
 
-
 .slide-dots {
     display: flex;
     justify-content: center;
@@ -41,59 +40,81 @@
 
 /* dots */
 .dot {
-  width: 10px;
-  height: 10px;
-  background-color: transparent;
-  border: 1px solid lightgrey;
-  border-radius: 50%;
-  margin: 0 5px;
-  
+    width: 10px;
+    height: 10px;
+    background-color: transparent;
+    border: 1px solid lightgrey;
+    border-radius: 50%;
+    margin: 0 5px;
 }
 
 /* current dot filled*/
 .active-dot {
-  background-color: lightgrey;
+    background-color: #f57657;
 }
 
 .homepage-info{
-    width:100%;
     height:auto;
-    background-color: #f7f7f7;
     margin: 30px auto;
     border-radius: 5px;
-   
+    border: 2px solid #f4c75f;
 }
 
 .homepage-info h1{
-    font-size: 3rem;
-    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
-    padding: 50px 20px;
-   
-}
-.homepage-btn-container{
-    width: 100%;
-    height: 100px;
-    background-color: #f7f7f7;
-    border-radius: 5px;
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    text-decoration: none;
-    color: black;
+    padding: 50px 50px;
+    font-weight: 300;
 }
 
 .homepage-btn-container{
-    width: 100%;
-    height: 200px;
-    background-color: #f7f7f7;
+    background-color: #f57657;
     border-radius: 5px;
-    align-items: center;
+    display: flex;
+    justify-content: center;
+    max-width: 40%;
+    margin: 0 auto;
 }
 
 .homepage-btn{
-    
-    font-size: 3rem;
+    font-size: 30px;
+    font-family: 'Raleway', sans-serif;
     text-decoration: none;
-    color: black;
+    color: white;
+    font-weight: 800;
+    text-align: center;
+    text-decoration: none;
+    padding: 35px;
+}
+
+.homepage-btn-container:hover {
+    background-color: #ffeb99; /* Change the background color on hover */
+    color: #f57657; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+}
+
+.diversity {
+    font-family: 'Raleway', sans-serif;
+    font-size: 10px;
+    background-color: #ffeb99;
+    padding: 20px;
+    margin-top: 30px;
+}
+
+.diversity h1 {
+    font-weight: 800;
+    font-size: 20px;
+    color: #f57657;
+    border-bottom: 1px solid #f57657;
+    padding-bottom: 15px;
+}
+
+.footer {
+    background-color: black;
+    padding: 10px;
+    color: white;
+    font-size: 6px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
 }
