--- a/her_tech_collective/src/components/NavBar.css
+++ b/her_tech_collective/src/components/NavBar.css
@@ -8,7 +8,6 @@
 }
 
 #navlinks {
-    /* text-align: right; */
     justify-content: flex-end;
     margin-top: 20px;
 }
@@ -24,6 +23,7 @@
     fill: #f57657; 
     cursor: pointer;
     transition: 0.4s;
+    float: right;
 }
 
 .nav-menu {
@@ -66,6 +66,7 @@
         padding: 10px;
         border-radius: 5px;
         flex-direction: column;
+        z-index: 2;
     }
 
     .nav-menu.open {
