--- a/her_tech_collective/src/components/ProfileCard/ProfileCard.css
+++ b/her_tech_collective/src/components/ProfileCard/ProfileCard.css
@@ -1,40 +1,47 @@
-.profile-card{
-    width: 30%;
-    text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:ital,wght@0,700;1,400&display=swap');
 
-
-@media (min-width: 768px) and (max-width: 1200px) {
-.profile-card{
-    width: 43%
-}
-}
-
-@media (max-width: 767px) {
-    .profile-card {
-        width: 75%
-    }
-
-}
 .profile-card {
-border: 1px solid black;
-box-shadow: 0px 0px 5px gray;
-margin: 10px;
-border-radius: 8px;
+    border: 2px solid #f57657;
+    box-shadow: 0px 0px 5px #fff6cc;
+    border-radius: 3px;
+    background-color: white;
+    margin-top: 20px;
 }
-
 
 .profile-card img {
-width: 100%;
-height: 300px;
-object-fit: cover;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 
-
 .profile-card h3 {
-text-align: center;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
 }
 
 .profile-card h4 {
-text-align: center;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    margin-top: -10px;
 }
+
+.profile-card a {
+    font-family: 'Raleway', sans-serif;
+}
+
+.profile-card h3, .profile-card h4, .profile-card a {
+    text-decoration: none !important;
+    color: black;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .profile-card{
+        width: 43%
+    }
+    }
+
+@media (max-width: 767px) {
+        .profile-card {
+            width: 75%
+        }
+    }
