--- a/her_tech_collective/src/pages/ProfilesPage.css
+++ b/her_tech_collective/src/pages/ProfilesPage.css
@@ -3,26 +3,23 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    margin: 40px auto;
+    margin-top: 60px;
 }
 
-/* Large screens */
-@media (min-width: 1200px) {
-    .profile-card {
-        width: 30%;
+
+@media (max-width: 991px) {
+    #profile-list {
+        justify-content: center; /* Center items on tablet screens */
+        padding-top: 70px;
     }
 }
 
-/* Medium screens */
-@media (min-width: 768px) and (max-width: 1199px) {
-    .profile-card {
-        width: 43%;
-    }
-}
-
-/* Mobile screens */
+/* Media query for mobile screens (e.g., smartphones) */
 @media (max-width: 767px) {
-    .profile-card {
-        width: 75%;
+    #profile-list {
+        flex-direction: column; /* Stack items vertically on mobile screens */
+        padding-top: 70px; /* Reduce top padding for better spacing */
+        width: 100%;
+        align-items: center;
     }
 }
