--- a/her_tech_collective/src/pages/HomePage.css
+++ b/her_tech_collective/src/pages/HomePage.css
@@ -2,15 +2,16 @@
 
 /* section */
 .banner {
-    position: relative;
+    /* position: relative; */
     width: 100%;
-    height:95vh;
-    overflow: hidden;
-    border-radius: 5px;
-    z-index: 1;
-    margin-top: 60px;
+    height:69vh;
+    /* overflow: hidden; */
+    /* border-radius: 5px; */
+    /* z-index: 1; */
+    margin-top: 10px;
 }
-.slider .slide {
+
+.slide {
     position:absolute;
     width: 100%;
     height: 100%;
@@ -19,7 +20,7 @@
 .slide img{
     position:absolute;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: cover;
     pointer-events: none;
     opacity: 0;
@@ -30,16 +31,16 @@
     opacity: 1;
 }
 
+/* dots */
 .slide-dots {
     display: flex;
     justify-content: center;
     align-items: flex-end; 
     position: absolute;
-    bottom: 10px; 
+    bottom: 250px; 
     width: 100%;
 }
 
-/* dots */
 .dot {
     width: 10px;
     height: 10px;
@@ -58,14 +59,13 @@
 
 .homepage-info{
     background-color: #fff6cc;
-    margin-top: -13px;
 }
 
 .homepage-info h1{
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Raleway', sans-serif;
     text-align: center;
-    padding: 50px 50px;
+    padding: 50px 90px;
     font-weight: 500;
     line-height: 1.5;
 }
@@ -127,4 +127,16 @@
     font-size: 6px;
     font-family: 'Raleway', sans-serif;
     text-align: center;
+}
+
+@media (max-width: 991px) {
+    .banner {
+        width: 100%;
+        height:34vh;
+    }
+
+    .slide-dots {
+        bottom: 530px; 
+        width: 100%;
+    }
 }
