--- a/her_tech_collective/src/components/ProfileCard/ProfileCard.css
+++ b/her_tech_collective/src/components/ProfileCard/ProfileCard.css
@@ -6,10 +6,11 @@
     border-radius: 3px;
     background-color: white;
     margin-top: 20px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .profile-card img {
-    width: 100%;
     height: 300px;
     object-fit: cover;
 }
@@ -43,5 +44,11 @@
 @media (max-width: 767px) {
         .profile-card {
             width: 75%
+        }
+    }
+
+    @media (max-width: 767px) {
+        .img {
+            align-items: center;
         }
     }
