--- a/her_tech_collective/src/pages/ProfilesPage.css
+++ b/her_tech_collective/src/pages/ProfilesPage.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:ital,wght@0,700;1,400&display=swap');
+
 #profile-list {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #fff6cc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Raleway', sans-serif;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 60px;
+    justify-content: space-between; /* Distribute cards evenly */
+    margin-top: 20px;
 }
-
 
 @media (max-width: 991px) {
     #profile-list {
