--- a/her_tech_collective/src/pages/ProfilePage.css
+++ b/her_tech_collective/src/pages/ProfilePage.css
@@ -1,21 +1,75 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Rubik:ital,wght@0,700;1,400&display=swap');
+
 main {
     max-width: 100%;
-    margin: 32px 44px 0px;
+    margin: 32px 44px 32px;
     padding: 0px 16px;
     background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
+
 }
 
-.profile-info{
-    text-align: center;
-}
 
-img {
-    max-width: 100%;
-    max-height: 600px;
-}
 
 .font-weight-normal {
     font-weight: normal;
+}
+
+
+
+
+.profile-page {
+    margin-top: 20px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.profile-page img {
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.profile-page h3 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+
+.profile-page h4 {
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    margin-top: -10px;
+}
+
+.linkedin_url {
+    font-family: 'Raleway', sans-serif;
+    color: #f57657; 
+    text-decoration: underline; 
+    display: inline-block; 
+}
+
+.profile-page a:hover {
+    text-decoration: none;
+}
+
+.profile-page h3,
+.profile-page h4 {
+    text-decoration: none !important;
+    color: black;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+    .profile-page {
+        width: 43%;
+    }
+}
+
+@media (max-width: 767px) {
+    .profile-page {
+        width: 75%;
+    }
 }
