--- a/her_tech_collective/src/pages/HomePage.css
+++ b/her_tech_collective/src/pages/HomePage.css
@@ -2,7 +2,7 @@
 
 /* section */
 .banner {
-    /* position: relative; */
+    position: relative;
     width: 100%;
     height:69vh;
     /* overflow: hidden; */
@@ -11,18 +11,18 @@
     margin-top: 10px;
 }
 
-.slide {
+/* .slide {
     position:absolute;
     width: 100%;
     height: 100%;
-}
+} */
 
 .slide img{
     position:absolute;
     width: 100%;
-    /* height: 100%; */
+    height: 100%;
     object-fit: cover;
-    pointer-events: none;
+    /* pointer-events: none; */
     opacity: 0;
     transition: 0.5s ease;
 }
@@ -37,8 +37,9 @@
     justify-content: center;
     align-items: flex-end; 
     position: absolute;
-    bottom: 250px; 
+    bottom: 0; 
     width: 100%;
+    padding-bottom:10px;
 }
 
 .dot {
@@ -135,8 +136,12 @@
         height:34vh;
     }
 
-    .slide-dots {
-        bottom: 530px; 
-        width: 100%;
+    .homepage-info h1 {
+        font-size: 20px;
+        padding: 50px 40px;
+    }
+
+    .homepage-btn-container{
+        max-width: 70%;
     }
 }
