--- a/her_tech_collective/src/components/ProfileCard/ProfileCard.css
+++ b/her_tech_collective/src/components/ProfileCard/ProfileCard.css
@@ -8,11 +8,13 @@
     margin-top: 20px;
     padding: 10px;
     margin: 10px;
+    width: 30%;
 }
 
 .profile-card img {
     height: 300px;
-    object-fit: cover;
+    padding-left: 60px;
+    /* object-fit: cover; */
 }
 
 .profile-card h3 {
