added success message and navigating to the collective page on the successful profile creation

--- a/her_tech_collective/src/components/Form/CreateProfileForm.css
+++ b/her_tech_collective/src/components/Form/CreateProfileForm.css
@@ -96,3 +96,16 @@ select#location {
         margin: 50px auto 0;
     }
 }
+
+.success-message {
+    color: #f57657;
+    font-size: 30px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800;
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+}  
